@@ -2,6 +2,7 @@
 * Horses enhanced by methamphetamines now transfer their ridiculous stats to offfspring.
 * Custom potions can now be used to create tipped arrows.
 * Buffed xp for creating potions and modifying potions.
+* Added a level 50 perk for brewing.
 
 # 1.12.2-1.2
 * You can no longer apply books to artifacts.
